// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD7yz9Lc5mY0HEthloFxnzuXkKYtfFWwTbTyG45qPvE9gMW",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8473n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "known",
              "value": {
                "$$type": "DeployOk",
                "queryId": 0n,
              },
            },
            "bounce": false,
            "from": "kQD7yz9Lc5mY0HEthloFxnzuXkKYtfFWwTbTyG45qPvE9gMW",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "9.990331",
          },
        ],
      },
    ],
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Increment",
              "key": 0n,
              "value": -1232n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQD7yz9Lc5mY0HEthloFxnzuXkKYtfFWwTbTyG45qPvE9gMW",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 5963n,
      },
    ],
  },
]
`;
